// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action runAction push to develop branch 1`] = `
Array [
  Array [
    "##[info] Handling push to branch develop",
  ],
]
`;

exports[`action runAction push to env/<dev> branch Invalid (unconfigured) branch 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/dev2",
  ],
]
`;

exports[`action runAction push to env/<dev> branch Valid Push and Build 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/dev",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Skipping check for existing image with tag env-dev, building new image",
  ],
  Array [
    "##[info] Image built",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Multiple pull request opened 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Multiple pull request opened 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch No pull request opened 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch No pull request opened 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Pull request opened against invalid branch 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Pull request opened against invalid branch 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Pull request opened against invalid branch 3`] = `
Array [
  Array [
    Object {
      "body": "Pull requests from \`hotfix/<name>\` branches can only target \`env/prod\` and \`env/staging\`:

* If this is supposed to be a hotfix, please re-target this pull request.
* If this is not supposed to be a hotfix, please use a branch name that does not begin with \`hotfix/\`",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix (self) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Skipping check for existing image with tag v1.2.1-pre, building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.1 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Running CI Checks",
  ],
  Array [
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix (self) 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix (self) 3`] = `
Array [
  Array [
    Object {
      "body": "Docker image has been successfully built and pushed as: \`:v1.2.1-pre\`

Please deploy this image to a development environment, and test it is working as expected before merging this pull request.",
      "pullRequestNumber": 321,
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix (self) 4`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [],
  "pushImage": Array [
    Array [
      "v1.2.1-pre",
    ],
  ],
  "retagImage": Array [],
}
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Skipping check for existing image with tag v1.2.1-pre, building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.1 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Running CI Checks",
  ],
  Array [
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix 3`] = `
Array [
  Array [
    Object {
      "body": "Docker image has been successfully built and pushed as: \`:v1.2.1-pre\`

Please deploy this image to a development environment, and test it is working as expected before merging this pull request.",
      "pullRequestNumber": 321,
      "state": "approve",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Successful hotfix 4`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [],
  "pushImage": Array [
    Array [
      "v1.2.1-pre",
    ],
  ],
  "retagImage": Array [],
}
`;

exports[`action runAction push to hotfix/<name> branch Tag already exists 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag already exists 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag already exists 3`] = `
Array [
  Array [
    Object {
      "body": "There is already a tag for version v1.2.1,so we can't create another release with the same version.

Please update the version in \`package.json\`

 to something that has not yet had peen deployed to \`env/prod\` or \`env/staging\`.",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag created during build 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Skipping check for existing image with tag v1.2.1-pre, building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.1 still does not exist",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag created during build 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag created during build 3`] = `
Array [
  Array [
    Object {
      "body": "During the build of the docker image, the tag v1.2.1-pre was created, and so the workflow has been aborted, and the docker image has not been pushed.

Please chose a new version and update the pull request.",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Tag created during build 4`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [],
  "pushImage": Array [],
  "retagImage": Array [],
}
`;

exports[`action runAction push to hotfix/<name> branch Target not an ancestor 1`] = `
Array [
  Array [
    "##[info] Handling push to branch hotfix/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
]
`;

exports[`action runAction push to hotfix/<name> branch Target not an ancestor 2`] = `
Array [
  Array [
    Object {
      "branch": "hotfix/foo",
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod (self) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch some-feature-branch",
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod (self) 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod (self) 3`] = `
Array [
  Array [
    Object {
      "body": "Pull requests that modify \`env/prod\` must be either:

* an update, merging \`env/staging\` into \`env/prod\`, or
* a hotfix, merging \`hotfix/<name>\` into \`env/prod\`

For more information, please read our [Releases + Deployment process](https://github.com/UN-OCHA/hpc-actions#releases--deployment)",
      "pullRequestNumber": 321,
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod 1`] = `
Array [
  Array [
    "##[info] Handling push to branch some-feature-branch",
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against prod 3`] = `
Array [
  Array [
    Object {
      "body": "Pull requests that modify \`env/prod\` must be either:

* an update, merging \`env/staging\` into \`env/prod\`, or
* a hotfix, merging \`hotfix/<name>\` into \`env/prod\`

For more information, please read our [Releases + Deployment process](https://github.com/UN-OCHA/hpc-actions#releases--deployment)",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against staging 1`] = `
Array [
  Array [
    "##[info] Handling push to branch some-feature-branch",
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against staging 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch Invalid PR against staging 3`] = `
Array [
  Array [
    Object {
      "body": "Pull requests that modify \`env/staging\` must be either:

* a release, merging \`release/<version>\` into \`env/staging\`, or
* a hotfix, merging \`hotfix/<name>\` into \`env/staging\`

For more information, please read our [Releases + Deployment process](https://github.com/UN-OCHA/hpc-actions#releases--deployment)",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to other branch Valid PR (self) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch some-feature-branch",
  ],
  Array [
    "##[info] Running CI Checks",
  ],
  Array [
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to other branch Valid PR (self) 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch Valid PR (self) 3`] = `
Array [
  Array [
    Object {
      "body": "Checks have passed and this pull request is ready for manual review",
      "pullRequestNumber": 321,
    },
  ],
]
`;

exports[`action runAction push to other branch Valid PR 1`] = `
Array [
  Array [
    "##[info] Handling push to branch some-feature-branch",
  ],
  Array [
    "##[info] Running CI Checks",
  ],
  Array [
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to other branch Valid PR 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch Valid PR 3`] = `
Array [
  Array [
    Object {
      "body": "Checks have passed and this pull request is ready for manual review",
      "pullRequestNumber": 321,
      "state": "approve",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Check directory 1`] = `
Array [
  Array [
    "[stdout]",
    "##[info] Handling push to branch some-feature-branch",
  ],
  Array [
    "[stdout]",
    "##[info] Running CI Checks",
  ],
  Array [
    "[stdout]",
    "##[info] Running: cat package.json",
  ],
  Array [
    "[stdout]",
    "{\\"version\\":\\"1.2.0\\"}",
  ],
  Array [
    "[stdout]",
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to other branch ci Check directory 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Check directory 3`] = `
Array [
  Array [
    Object {
      "body": "Checks have passed and this pull request is ready for manual review",
      "pullRequestNumber": 321,
      "state": "approve",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Command with interleaved stderr and stdout 1`] = `
Array [
  Array [
    "[stdout]",
    "##[info] Handling push to branch some-feature-branch",
  ],
  Array [
    "[stdout]",
    "##[info] Running CI Checks",
  ],
  Array [
    "[stdout]",
    "##[info] Running: echo && echo foo && sleep 0.1s && echo bar 1>&2 && sleep 0.1s && echo baz",
  ],
  Array [
    "[stdout]",
    "",
  ],
  Array [
    "[stdout]",
    "foo",
  ],
  Array [
    "[stderr]",
    "bar",
  ],
  Array [
    "[stdout]",
    "baz",
  ],
  Array [
    "[stdout]",
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to other branch ci Command with interleaved stderr and stdout 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Command with interleaved stderr and stdout 3`] = `
Array [
  Array [
    Object {
      "body": "Checks have passed and this pull request is ready for manual review",
      "pullRequestNumber": 321,
      "state": "approve",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Command with nonzero exit code 1`] = `
Array [
  Array [
    "[stdout]",
    "##[info] Handling push to branch some-feature-branch",
  ],
  Array [
    "[stdout]",
    "##[info] Running CI Checks",
  ],
  Array [
    "[stdout]",
    "##[info] Running: exit 123",
  ],
]
`;

exports[`action runAction push to other branch ci Command with nonzero exit code 2`] = `
Array [
  Array [
    Object {
      "branch": "some-feature-branch",
    },
  ],
]
`;

exports[`action runAction push to other branch ci Command with nonzero exit code 3`] = `Array []`;

exports[`action runAction push to production or staging env/prod deployments + mergeback match 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
  Array [
    "##[info] Tag is unchanged, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating prod deployment",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/prod deployments + mergeback match 2`] = `
Array [
  Array [
    Object {
      "base": "env/staging",
      "head": "mergeback/prod/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update env/staging with changes from env/prod",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/prod deployments + mergeback no-match 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
  Array [
    "##[info] Tag is unchanged, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/prod deployments + mergeback no-match 2`] = `
Array [
  Array [
    Object {
      "base": "env/staging",
      "head": "mergeback/prod/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update env/staging with changes from env/prod",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (different sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (different sha) 2`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (different sha) 3`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) (existing matching tag) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) (existing matching tag) 2`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) (existing matching tag) 3`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) (existing matching tag) 4`] = `Array []`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) 2`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) 3`] = `
Array [
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Image (matching sha) 4`] = `Array []`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (different sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] This image was built with a different tree, we can't use it",
  ],
  Array [
    "##[info] Building new image",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (different sha) 2`] = `
Array [
  Array [
    "v1.2.0",
  ],
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (different sha) 3`] = `
Array [
  Array [
    "v1.2.0",
  ],
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (matching sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Retagging v1.2.0-pre as v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (matching sha) 2`] = `
Array [
  Array [
    "v1.2.0",
  ],
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Existing Pre-Release Image (matching sha) 3`] = `
Array [
  Array [
    "v1.2.0",
  ],
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Non-Existant Image (tag changed) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Non-Existant Image (tag changed) 2`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [
    Array [
      "v1.2.0",
    ],
    Array [
      "v1.2.0-pre",
    ],
  ],
  "pushImage": Array [],
  "retagImage": Array [],
}
`;

exports[`action runAction push to production or staging env/prod docker Non-Existant Image 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
  Array [
    "##[info] Tag is unchanged, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
]
`;

exports[`action runAction push to production or staging env/prod docker Non-Existant Image 2`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [
    Array [
      "v1.2.0",
    ],
    Array [
      "v1.2.0-pre",
    ],
  ],
  "pushImage": Array [
    Array [
      "v1.2.0",
    ],
  ],
  "retagImage": Array [],
}
`;

exports[`action runAction push to production or staging env/prod mergeback 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image with tag v1.2.0 does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
  Array [
    "##[info] Tag is unchanged, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/prod/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/prod mergeback 2`] = `
Array [
  Array [
    Object {
      "base": "env/staging",
      "head": "mergeback/prod/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update env/staging with changes from env/prod",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/prod tagging Existing tag (changed tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
]
`;

exports[`action runAction push to production or staging env/prod tagging Existing tag (current commit) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod tagging Existing tag (different commit, matching tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The current tree matches the existing tag, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/prod tagging Non-Existant Tag 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/prod",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Creating and pushing new tag v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging deployments + mergeback match 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating staging deployment",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/staging/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/staging deployments + mergeback match 2`] = `
Array [
  Array [
    Object {
      "base": "develop",
      "head": "mergeback/staging/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update develop with changes from env/staging",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/staging deployments + mergeback no-match 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/staging/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/staging deployments + mergeback no-match 2`] = `
Array [
  Array [
    Object {
      "base": "develop",
      "head": "mergeback/staging/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update develop with changes from env/staging",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (different sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] This image was built with a different tree, we can't use it",
  ],
  Array [
    "##[info] Building new image",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (different sha) 2`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (different sha) 3`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) (existing matching tag) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Retagging v1.2.0 as v1.2.0-pre",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 is unchanged",
  ],
  Array [
    "##[info] Tag is unchanged, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) (existing matching tag) 2`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) (existing matching tag) 3`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) (existing matching tag) 4`] = `
Array [
  Array [
    "v1.2.0",
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Retagging v1.2.0 as v1.2.0-pre",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) 2`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) 3`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Image (matching sha) 4`] = `
Array [
  Array [
    "v1.2.0",
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (different sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] This image was built with a different tree, we can't use it",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (different sha) 2`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (different sha) 3`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
  Array [
    "v1.2.0",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (matching sha) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image already exists, checking it was built with same git tree",
  ],
  Array [
    "##[info] Image was built with same tree, no need to run build again",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/staging/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (matching sha) 2`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Existing Pre-Release Image (matching sha) 3`] = `
Array [
  Array [
    "v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Non-Existant Image (tag changed) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Non-Existant Image (tag changed) 2`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [
    Array [
      "v1.2.0-pre",
    ],
    Array [
      "v1.2.0",
    ],
  ],
  "pushImage": Array [],
  "retagImage": Array [],
}
`;

exports[`action runAction push to production or staging env/staging docker Non-Existant Image 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/staging/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
]
`;

exports[`action runAction push to production or staging env/staging docker Non-Existant Image 2`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [
    Array [
      "v1.2.0-pre",
    ],
    Array [
      "v1.2.0",
    ],
  ],
  "pushImage": Array [
    Array [
      "v1.2.0-pre",
    ],
  ],
  "retagImage": Array [],
}
`;

exports[`action runAction push to production or staging env/staging mergeback 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
  Array [
    "##[info] Image with tag v1.2.0-pre does not yet exist",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0",
  ],
  Array [
    "##[info] No image exists with this tag",
  ],
  Array [
    "##[info] Building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.0 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Creating and pushing mergeback Branch: mergeback/staging/1.2.0",
  ],
  Array [
    "##[info] Opening Mergeback Pull Request",
  ],
  Array [
    "##[info] Pull Request Opened, workflow complete",
  ],
]
`;

exports[`action runAction push to production or staging env/staging mergeback 2`] = `
Array [
  Array [
    Object {
      "base": "develop",
      "head": "mergeback/staging/1.2.0",
      "labels": Array [
        "some-label",
      ],
      "title": "Update develop with changes from env/staging",
    },
  ],
]
`;

exports[`action runAction push to production or staging env/staging tagging Existing tag (changed tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
]
`;

exports[`action runAction push to production or staging env/staging tagging Existing tag (current commit) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The tag is for the current commit, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging tagging Existing tag (different commit, matching tree) 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] The tag v1.2.0 already exists, checking that tree hasn't changed",
  ],
  Array [
    "##[info] The current tree matches the existing tag, okay to continue",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to production or staging env/staging tagging Non-Existant Tag 1`] = `
Array [
  Array [
    "##[info] Handling push to branch env/staging",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.0",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Checking for existing docker image with tag v1.2.0-pre",
  ],
]
`;

exports[`action runAction push to release/<name> branch Pull request opened against invalid branch 1`] = `
Array [
  Array [
    "##[info] Handling push to branch release/foo",
  ],
]
`;

exports[`action runAction push to release/<name> branch Pull request opened against invalid branch 2`] = `
Array [
  Array [
    Object {
      "branch": "release/foo",
    },
  ],
]
`;

exports[`action runAction push to release/<name> branch Pull request opened against invalid branch 3`] = `
Array [
  Array [
    Object {
      "body": "Pull requests from \`release/<name>\` branches can only target \`env/staging\`:

* If this is supposed to be a release, please re-target this pull request.
* If this is not supposed to be a release, please use a branch name that does not begin with \`release/\`",
      "pullRequestNumber": 321,
      "state": "reject",
    },
  ],
]
`;

exports[`action runAction push to release/<name> branch Successful release 1`] = `
Array [
  Array [
    "##[info] Handling push to branch release/foo",
  ],
  Array [
    "##[info] Checking if there is an existing tag for v1.2.1",
  ],
  Array [
    "##[info] Logging in to docker",
  ],
  Array [
    "##[info] Skipping check for existing image with tag v1.2.1-pre, building new image",
  ],
  Array [
    "##[info] Image built, checking tag v1.2.1 still does not exist",
  ],
  Array [
    "##[info] Tag has not been created, okay to continue",
  ],
  Array [
    "##[info] Pushing image to docker repository",
  ],
  Array [
    "##[info] Image Pushed",
  ],
  Array [
    "##[info] Running CI Checks",
  ],
  Array [
    "##[info] CI Checks Complete",
  ],
]
`;

exports[`action runAction push to release/<name> branch Successful release 2`] = `
Array [
  Array [
    Object {
      "branch": "release/foo",
    },
  ],
]
`;

exports[`action runAction push to release/<name> branch Successful release 3`] = `
Array [
  Array [
    Object {
      "body": "Docker image has been successfully built and pushed as: \`:v1.2.1-pre\`

Please deploy this image to a development environment, and test it is working as expected before merging this pull request.",
      "pullRequestNumber": 321,
      "state": "approve",
    },
  ],
]
`;

exports[`action runAction push to release/<name> branch Successful release 4`] = `
Object {
  "getMetadata": Array [],
  "pullImage": Array [],
  "pushImage": Array [
    Array [
      "v1.2.1-pre",
    ],
  ],
  "retagImage": Array [],
}
`;
